tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_2.f90:34:5
   |
34 |     integer init_x = 1
   |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:322:5
    |
322 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:325:17
    |
325 |     integer  :: ?
    |                 ^ token not recognized

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:325:17
    |
325 |     integer  :: ?
    |                 ^ token not recognized

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:22:12
   |
22 |     common /rowns/ rowns(209)
   |            ^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:23:14
   |
23 |     print *, set_exponent([1, 2, 3], 2)
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
